=================

Notable User Facing Changes
---------------------------

- Dropped support for Clang/LLVM versions 6.0 to 9.0 (inclusive)
- Added support for program-scope variables in the CPU drivers
- Added support for generic address spaces in the CPU drivers
- Added basic support for cl_khr_subgroups for CPUs: A single
  subgroup that always executes the whole X-dimension's WIs.
- Added initial (incomplete) support for 
  cl_intel_required_subgroup_size for CPUs
- AlmaIF's OpenASIP backend now supports a standalone mode.
  It generates a standalone C program from a kernel launch, which
  can then be compiled and executed with ttasim or RTL simulation.
- Added a user env POCL_BITCODE_FINALIZER that can be used to
  call a custom script that manipulates the final bitcode before
  passing it to the code generation.
- Pulled in alternative work-group function mode for non-SPMD from Open SYCL:
  Continuation-based synchronization is slightly more general than POCL's
  current kernel compiler, but allows for fewer hand-rolled optimizations.
  CBS is expected to work for kernels that POCL's current kernel compiler
  does not support. Currently, CBS can be manually enabled by setting
  the environment variable `POCL_WORK_GROUP_METHOD=cbs`.
  
Notable Fixes
-------------

- Fix handling of clBuildProgram() -I directories given with quotes or
  with leading/trailing white space.

3.1 December 2022
=================

Notable User Facing Changes
---------------------------

- Support for Clang/LLVM 15.0
- Work-in-progress Vulkan-driver:
  * implement clEnqRead/Copy/WriteRect + clEnqFillBuffer
  * implement global offsets
  * add support for external memory
  * implement WG sizes larger than vulkan limits with global offsets
  * fix module constants
  * and other small fixes and improvements
- SPIR-V support: much improved support for both CPU driver and CUDA
  * vectorized versions of kernel library functions now supported