@@ -9,7 +9,7 @@ Notable User Facing Changes
 - Added support for generic address spaces in the CPU drivers
 - Added basic support for cl_khr_subgroups for CPUs: A single
   subgroup that always executes the whole X-dimension's WIs.
-- Added initial (incomplete) support for 
+- Added initial (incomplete) support for
   cl_intel_required_subgroup_size for CPUs
 - AlmaIF's OpenASIP backend now supports a standalone mode.
   It generates a standalone C program from a kernel launch, which
@@ -23,7 +23,9 @@ Notable User Facing Changes
   CBS is expected to work for kernels that POCL's current kernel compiler
   does not support. Currently, CBS can be manually enabled by setting
   the environment variable `POCL_WORK_GROUP_METHOD=cbs`.
-  
+- Added a new POCL_CPU_LOCAL_MEM_SIZE environment for overriding the
+  local memory size for the CPU devices.
+
 Notable Fixes
 -------------
 
